test/sema/negative/impl_bounds.impala
trait T[A] {}
trait U[B] {}
impl[C: U[C]] T[C] for int {}
fn f[D: T[D]](x: D) -> D { x }
fn main() -> () {
    f[int](42);
}
